File: plugins/nexus-repository-apt/src/test/virtualthread/org/sonatype/nexus/repository/apt/AptProxyFacetVirtualThreadTest.java